SF Primes/src/objects/Page_Component__c.object
<CustomObject>
    <fields>
        <fullName>Chatter_Group__c</fullName>
        <label>Chatter Group</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Tag__c</fullName>
        <description>Include the bootstrap grid css class(es) here.</description>
        <inlineHelpText>Include the bootstrap grid css class(es) here.</inlineHelpText>
        <label>Class Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_ID__c</fullName>
        <label>Component ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Order_Picklist__c</fullName>
        <label>Component Order Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Component_Order__c</fullName>
        <label>Component Order</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carousel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Style__c</fullName>
        <label>Custom Style</label>
        <picklist>
            <picklistValues>
                <fullName>col-md-12</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>col-md-12 nopadding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-md-4 col-xs-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-lg-3 col-md-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-12 cdk-green-hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-12 pad-bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-3 pad-bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-4 pad-bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-8 pad-bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-9 col-md-offset-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-9 col-md-offset-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-9 pad-bottom</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Content__c</fullName>
        <label>Main Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Page Component</label>
        <referenceTo>Page_Component__c</referenceTo>
        <relationshipLabel>Portal Page Components</relationshipLabel>
        <relationshipName>Portal_Page_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Page</label>
        <referenceTo>Portal_Page__c</referenceTo>
        <relationshipName>Page_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VFPageName__c</fullName>
        <label>VFPageName</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_ID__c</fullName>
        <label>Video ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>Portal Page Component</label>
    <nameField>
        <label>Page Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Page Components</pluralLabel>
    <recordTypes>
        <fullName>Carousel</fullName>
        <active>true</active>
        <label>Carousel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chatter</fullName>
        <active>true</active>
        <label>Chatter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Content</fullName>
        <active>true</active>
        <label>Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Video</fullName>
        <active>true</active>
        <label>Video</label>
    </recordTypes>
    <recordTypes>
        <fullName>VisualforcePage</fullName>
        <active>true</active>
        <label>VisualforcePage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Visualforce_Page</fullName>
        <active>true</active>
        <label>Visualforce Page</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EMP_PageComponentCarousel</fullName>
        <active>false</active>
        <description>Component Order needs to be 00 if its a Carousel on Page Component Object</description>
        <errorConditionFormula>AND
($RecordType.Name = &quot;Carousel&quot;, 
ISPICKVAL(Component_Order_Picklist__c, &quot;00&quot;))</errorConditionFormula>
        <errorDisplayField>Component_Order_Picklist__c</errorDisplayField>
        <errorMessage>Component Order needs to be 00 if its a Carousel on Page Component Object</errorMessage>
    </validationRules>
</CustomObject>